introduce PhaseUpdateResult for control-flow-like behaviour; PhaseUpdateResult returned within update of monslava scripts; pass log to monslava scripts & use; ensure phase logic runs in a single thread to avoid GraalJS MultiThreadAccess exception